@@ -1,5 +1,9 @@
 2006-12-07  Ivan N. Zlatev  <contact i-nZ.net>
 
+	* src/XinePlayerEngine.cs: Add a pile of supported file formats.
+
+2006-12-07  Ivan N. Zlatev  <contact i-nZ.net>
+
 	* src/Xine.cs: libxine to libxine.so.1. Thanks to Melacca for reporting.
 
 2006-10-02  Ivan N. Zlatev  <contact i-nZ.net>
